--- a/app/src/main/res/layout/fragment_news_headline_list.xml
+++ b/app/src/main/res/layout/fragment_news_headline_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.newHeadline.NewsHeadlineListFragment">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,28 +30,40 @@
 
     </LinearLayout>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_marginTop="60dp"
+        android:id="@+id/nested_scroll"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:descendantFocusability="blocksDescendants"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/help_container"/>
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.2">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <FrameLayout
-            android:id="@+id/loading_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffffff">
-
+        android:layout_marginTop="60dp"
+        android:id="@+id/loading_layout"
+        android:background="@color/white"
+        android:layout_height="match_parent">
             <ProgressBar
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center" />
-        </FrameLayout>
-
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/no_data_tv"
             android:layout_width="match_parent"
@@ -63,9 +74,4 @@
 
     </FrameLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/help_container"/>
-
-</LinearLayout>
+</FrameLayout>
